[gd_scene load_steps=9 format=3 uid="uid://88om2cwr1ohh"]

[ext_resource type="PackedScene" uid="uid://vtc1gx78xl2m" path="res://test/enemy/character-ghost.glb" id="1_ksqmb"]
[ext_resource type="Script" path="res://test/enemy/enemy_ghost.gd" id="2_a5scm"]
[ext_resource type="PackedScene" uid="uid://b4upnpxawoc68" path="res://test/attack/components/health_component.tscn" id="3_xrpy0"]
[ext_resource type="Script" path="res://test/enemy/damage_number_spawn_point.gd" id="4_5pmsp"]
[ext_resource type="PackedScene" uid="uid://cxgrdxibbb8wp" path="res://test/enemy/damage_number.tscn" id="5_gambk"]
[ext_resource type="Script" path="res://test/drop item/drop_item.gd" id="6_tdq21"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_w4ara"]
radius = 0.18
height = 0.65

[sub_resource type="SphereShape3D" id="SphereShape3D_nk3g1"]
radius = 0.8

[node name="enemy_ghost" instance=ExtResource("1_ksqmb")]
collision_layer = 2
script = ExtResource("2_a5scm")

[node name="character_ghost" parent="." index="0"]
transform = Transform3D(-0.01, -1.50996e-09, 6.60024e-17, 0, -4.37114e-10, -0.01, 1.50996e-09, -0.01, 4.37114e-10, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="." index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.461236, 0)
shape = SubResource("CapsuleShape3D_w4ara")

[node name="Area3D" type="Area3D" parent="." index="3"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.458744, 0)
shape = SubResource("SphereShape3D_nk3g1")

[node name="Timer" type="Timer" parent="." index="4"]
wait_time = 3.0
autostart = true

[node name="HealthComponent" parent="." index="5" instance=ExtResource("3_xrpy0")]
max_health = 2.0

[node name="DamageNumberSpawnPoint" type="Marker3D" parent="." index="6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.703704, 0)
script = ExtResource("4_5pmsp")
DamageNumber = ExtResource("5_gambk")

[node name="DropItem" type="Marker3D" parent="." index="7"]
script = ExtResource("6_tdq21")
min_drop_number = 1
max_dorp_number = 2

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
